# mandala

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
nodes/: Cargo.toml
nodes/src/: lib.rs  node.rs  nodes.rs  valuable_node.rs
nodes/src/values/: boolean_value.rs  empty_node.rs  float_value.rs  mod.rs  number_value.rs
