[package]
name = "nodes"
version = "0.1.0"
authors = ["Carlos Marques <carlos.marques@mkodo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
maplit = "1.0.2"
rust_decimal = "1.4.1"
